updates on fitting functions

--- a/phasepy-examples/1. Components and mixtures.ipynb
+++ b/phasepy-examples/1. Components and mixtures.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "## Single components\n",
     "\n",
-    "Physical properties are specified when a component is created. Typical properties include critical properties (``Tc``, ``Pc``, ``Zc``, ``Vc``), acentric factor (``w``), Antoine Coefficients (``Ant``) and group specification for Modified UNIFAC group contribution (``GC``) method."
+    "Physical properties are specified when a component is created. Typical properties include critical properties (``Tc``, ``Pc``, ``Zc``, ``Vc``), acentric factor (``w``), Antoine Coefficients (``Ant``), group specification for Modified UNIFAC group contribution (``GC``) method and molecular volume and surface (``ri`` and ``qi``) used in UNIQUAC."
    ]
   },
   {
@@ -47,11 +47,11 @@
    "source": [
     "water = component(name='water', Tc=647.13, Pc=220.55, Zc=0.229, Vc=55.948, w=0.344861,\n",
     "                  Ant=[11.64785144, 3797.41566067, -46.77830444],\n",
-    "                  GC={'H2O':1})\n",
+    "                  GC={'H2O':1}, ri=0.92, qi=1.4)\n",
     "\n",
     "ethanol = component(name='ethanol', Tc=514.0, Pc=61.37, Zc=0.241, Vc=168.0, w=0.643558,\n",
     "                    Ant=[11.61809279, 3423.0259436, -56.48094263],\n",
-    "                    GC={'CH3':1, 'CH2':1, 'OH(P)':1})\n",
+    "                    GC={'CH3':1, 'CH2':1, 'OH(P)':1}, ri=2.1055, qi=1.972)\n",
     "\n",
     "print('Water saturation pressure at 373 K:', water.psat(T=373.0), 'bar')\n",
     "print('Water liquid molar volume at 310 K:', water.vlrackett(T=310.0), 'cm3/mol')\n",
@@ -101,7 +101,7 @@
     "# Example 2. Peng Robinson EOS for single component (with volume translation, parameter c)\n",
     "ethanol = component(name='ethanol', Tc=514.0, Pc=61.37, Zc=0.241, Vc=168.0, w=0.643558,\n",
     "                    c=5.35490936, Ant=[11.61809279, 3423.0259436, -56.48094263],\n",
-    "                    GC={'CH3':1, 'CH2':1, 'OH(P)':1})\n",
+    "                    GC={'CH3':1, 'CH2':1, 'OH(P)':1}, ri=2.1055, qi=1.972)\n",
     "eos = preos(ethanol, volume_translation=True)\n",
     "print('Saturation pressure, liquid and vapor molar volumes:', eos.psat(T=350.0))\n",
     "print('Liquid density:', eos.density(T=350.0, P=1.0, state='L'))\n",
@@ -243,6 +243,23 @@
     "C1 = np.array([-13.271128, 101.837857, -1100.29221])\n",
     "mix.rk(C0, C1)\n",
     "eos = preos(mix, mixrule='mhv_rk')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example 10. Initialization of Peng Robinson EOS for mixture. Mixing rule is Modified Huron Vidal with UNIQUAC.\n",
+    "\n",
+    "# note: you need to provide the molecular surface and volume (ri and qi) to the components for this method to work.\n",
+    "\n",
+    "# interactions energies in K\n",
+    "A12, A21 = -7.33540823, 151.83100234 \n",
+    "Aij = np.array([[0., A12], [A21, 0.]])\n",
+    "mix.uniquac(Aij)\n",
+    "eos = preos(mix, mixrule='mhv_uniquac')"
    ]
   },
   {
