--- a/SGTPy-examples/2. Property calculations from SAFT-VR-Mie EoS (pure fluid).ipynb
+++ b/SGTPy-examples/2. Property calculations from SAFT-VR-Mie EoS (pure fluid).ipynb
@@ -105,9 +105,11 @@
    ],
    "source": [
     "print('Critical point calculation success: ', eos.critical)\n",
-    "print('Critical temperature:', eos.Tc, 'K')\n",
-    "print('Critical pressure:', eos.Pc, 'Pa')\n",
-    "print('Critical density:', eos.rhoc, 'mol/m^3')"
+    "if eos.critical:\n",
+    "    print('Critical temperature:', eos.Tc, 'K')\n",
+    "    print('Critical pressure:', eos.Pc, 'Pa')\n",
+    "    print('Critical density:', eos.rhoc, 'mol/m^3')\n",
+    "    \n"
    ]
   },
   {
