updated pure example

--- a/SGTPy-examples/2. Property calculations from SAFT-VR-Mie EoS (pure fluid).ipynb
+++ b/SGTPy-examples/2. Property calculations from SAFT-VR-Mie EoS (pure fluid).ipynb
@@ -142,7 +142,7 @@
     "Tc0 = 690.  # K\n",
     "rhoc0 = 17500.  # mol/m3\n",
     "\n",
-    "eos.get_critical(Tc0, rhoc0)"
+    "eos.get_critical(Tc0, rhoc0, overwrite=True)"
    ]
   },
   {
